cha-pre-live-flux2/cha-eks-5a/icis-services/icis-github-runner/gh-arc-runner-scale-set/namespace-icis-gh-runner.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: icis-gh-arc-runners
  name: icis-gh-arc-runners
